--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ date_format: '%Y-%m-%d'
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
 url: https://kouji0224.github.io/
-baseurl: explorer
+baseurl: jekyll
 permalink: pretty
 
 # Pagination
